--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/MuhammedKadioglu/EvaTask#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "moment": "^2.29.4",
+    "mysql2": "^3.1.1",
     "sequelize": "^6.11.0",
     "tedious": "^15.1.2"
   }
